// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should render correctly with all the default props 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: inline-block;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    alignitems="center"
    class="c0"
    display="block"
    flex="1"
    flowdirection="vertical"
    variant="solid"
  >
    <span
      class="c1"
      textalign="initial"
      textcolor="inherit"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly when flow direction is horizontal and separator is set true 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: inline-block;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.c0 >div+div {
  border-left: 1px solid #98A7B7;
}

.c1 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: inline-block;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}

.c1 >div+div {
  border-left: 1px solid #98A7B7;
}

.c3 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: inline-block;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
}

.c3 >div+div {
  border-left: 1px solid #98A7B7;
}

.c4 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: inline-block;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  flex-direction: row;
  align-items: flex-start;
  justify-content: center;
}

.c4 >div+div {
  border-left: 1px solid #98A7B7;
}

.c5 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: inline-block;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  flex-direction: row;
  align-items: flex-end;
  justify-content: center;
}

.c5 >div+div {
  border-left: 1px solid #98A7B7;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c5 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c5 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c5 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c5 {
    padding: 2.4rem;
  }
}

<div>
  <div
    alignitems="center"
    class="c0"
    display="block"
    flex="1"
    flowdirection="horizontal"
    variant="solid"
  >
    <div
      alignitems="left"
      class="c1"
      display="block"
      flex="1"
      flowdirection="horizontal"
      variant="solid"
    >
      <span
        class="c2"
        textalign="initial"
        textcolor="inherit"
      >
        Dummy Text
      </span>
    </div>
    <div
      alignitems="right"
      class="c3"
      display="block"
      flex="1"
      flowdirection="horizontal"
      variant="solid"
    >
      <span
        class="c2"
        textalign="initial"
        textcolor="inherit"
      >
        Dummy Text
      </span>
    </div>
    <div
      alignitems="top"
      class="c4"
      display="block"
      flex="1"
      flowdirection="horizontal"
      variant="solid"
    >
      <span
        class="c2"
        textalign="initial"
        textcolor="inherit"
      >
        Dummy Text
      </span>
    </div>
    <div
      alignitems="bottom"
      class="c5"
      display="block"
      flex="1"
      flowdirection="horizontal"
      variant="solid"
    >
      <span
        class="c2"
        textalign="initial"
        textcolor="inherit"
      >
        Dummy Text
      </span>
    </div>
    <div
      alignitems="center"
      class="c0"
      display="block"
      flex="1"
      flowdirection="horizontal"
      variant="solid"
    >
      <span
        class="c2"
        textalign="initial"
        textcolor="inherit"
      >
        Dummy Text
      </span>
    </div>
  </div>
</div>
`;

exports[`Card component should render properly when fullWidth and fullHeight is set true 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: block;
  width: 100%;
  height: 100%;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    alignitems="center"
    class="c0"
    display="block"
    flex="1"
    flowdirection="vertical"
    variant="solid"
  >
    <span
      class="c1"
      textalign="initial"
      textcolor="inherit"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly when it is clickable 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: inline-block;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.c0,
.c0 * {
  cursor: pointer;
}

.c0:hover {
  box-shadow: 0 0.4rem 0.8rem rgba(176,188,200,0.6);
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    alignitems="center"
    class="c0"
    display="block"
    flex="1"
    flowdirection="vertical"
    variant="solid"
  >
    <span
      class="c1"
      textalign="initial"
      textcolor="inherit"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly when separator is set true flow direction is vertical 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: inline-block;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}

.c0 >div+div {
  border-top: 1px solid #98A7B7;
}

.c1 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: inline-block;
  transition: all 100ms ease-out;
  border-radius: 0;
  margin: 0;
  border: none;
  box-shadow: none;
  background-color: transparent;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}

.c3 {
  overflow: auto;
  box-sizing: border-box;
  flex: 6;
  display: inline-block;
  transition: all 100ms ease-out;
  border-radius: 0;
  margin: 0;
  border: none;
  box-shadow: none;
  background-color: transparent;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
}

.c4 {
  overflow: auto;
  box-sizing: border-box;
  flex: 6;
  display: inline-block;
  transition: all 100ms ease-out;
  border-radius: 0;
  margin: 0;
  border: none;
  box-shadow: none;
  background-color: transparent;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.c5 {
  overflow: auto;
  box-sizing: border-box;
  flex: 6;
  display: inline-block;
  transition: all 100ms ease-out;
  border-radius: 0;
  margin: 0;
  border: none;
  box-shadow: none;
  background-color: transparent;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
}

@media (min-width:0px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c5 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c5 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c5 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c5 {
    padding: 2.4rem;
  }
}

<div>
  <div
    alignitems="left"
    class="c0"
    display="block"
    flex="1"
    flowdirection="vertical"
    variant="solid"
  >
    <div
      alignitems="left"
      class="c1"
      display="block"
      flex="1"
      flowdirection="vertical"
      variant="flat"
    >
      <span
        class="c2"
        textalign="initial"
        textcolor="inherit"
      >
        Marks
      </span>
    </div>
    <div
      alignitems="right"
      class="c3"
      display="block"
      flex="6"
      flowdirection="vertical"
      variant="flat"
    >
      <span
        class="c2"
        textalign="initial"
        textcolor="inherit"
      >
        Dummy Text
      </span>
    </div>
    <div
      alignitems="top"
      class="c4"
      display="block"
      flex="6"
      flowdirection="vertical"
      variant="flat"
    >
      <span
        class="c2"
        textalign="initial"
        textcolor="inherit"
      >
        Dummy Text
      </span>
    </div>
    <div
      alignitems="bottom"
      class="c5"
      display="block"
      flex="6"
      flowdirection="vertical"
      variant="flat"
    >
      <span
        class="c2"
        textalign="initial"
        textcolor="inherit"
      >
        Dummy Text
      </span>
    </div>
  </div>
</div>
`;

exports[`Card component should render properly with "flat" variant 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: inline-block;
  transition: all 100ms ease-out;
  border-radius: 0;
  margin: 0;
  border: none;
  box-shadow: none;
  background-color: transparent;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    alignitems="center"
    class="c0"
    display="block"
    flex="1"
    flowdirection="vertical"
    variant="flat"
  >
    <span
      class="c1"
      textalign="initial"
      textcolor="inherit"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly with "solid" variant 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: inline-block;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    alignitems="center"
    class="c0"
    display="block"
    flex="1"
    flowdirection="vertical"
    variant="solid"
  >
    <span
      class="c1"
      textalign="initial"
      textcolor="inherit"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly with display "block" 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: inline-block;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    alignitems="center"
    class="c0"
    display="block"
    flex="1"
    flowdirection="vertical"
    variant="solid"
  >
    <span
      class="c1"
      textalign="initial"
      textcolor="inherit"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly with display "flex" 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  flex: 1;
  display: inline-flex;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    alignitems="center"
    class="c0"
    display="flex"
    flex="1"
    flowdirection="vertical"
    variant="solid"
  >
    <span
      class="c1"
      textalign="initial"
      textcolor="inherit"
    >
      Dummy Text
    </span>
  </div>
</div>
`;
